Add claim-link card profile
